--- a/src/components/PatientConsultation/PatientConsultation.css
+++ b/src/components/PatientConsultation/PatientConsultation.css
@@ -3,6 +3,10 @@
   padding: 2rem;
   color: #224a68;
   position: relative;
+  overflow: hidden;
+}
+.patient-consultation-container.over{
+  position: fixed;
 }
 .patient-consultation-container h1{
   text-align: center;
@@ -47,26 +51,33 @@
   font-size: 1.1rem;
 }
 .patient-consultation-container .agreement{
-  position: absolute;
+  position: fixed;
   bottom: -20rem;
+  left: 0;
   opacity: 0;
   visibility: hidden;
   background-color: #86a4bb;
   padding: 1rem;
-  font-size: 1.3rem;
-  border-radius: 1rem;
+  font-size: 1.5rem;
   box-sizing: border-box;
-  width: 85%;
+  width: 100%;
   transition: all .3s;
+  min-height: 100vh;
 }
 .patient-consultation-container .agreement.display{
   opacity: 1;
   visibility: visible;
   bottom: 0;
 }
+.patient-consultation-container .agreement .main{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
 .patient-consultation-container .agreement p{
-  display: inline-block;
+  display: block;
   margin-bottom: 1rem;
+ 
 }
 .patient-consultation-container .agreement input{
   display: inline-block;
@@ -84,6 +95,7 @@
 .patient-consultation-container .agreement img{
   width: 2rem;
   display: block;
-  margin-left: auto;
-  margin-bottom: 2rem;
+  position: absolute;
+  right: 2rem;
+  top: 6rem;
 }
