--- a/src/components/PatientHome/PatientHome.css
+++ b/src/components/PatientHome/PatientHome.css
@@ -71,6 +71,10 @@
   box-shadow: 0 .1rem .4rem rgba(0,0,0,.2);
   justify-content: space-between;
 }
+.patient-home-indication-box.critical{
+  background-color: #e28383;
+  color: #630b0b;
+}
 .patient-home-indication-box img{
   width: 20%;
   margin-right: 2rem;
@@ -80,6 +84,9 @@
 }
 .patient-home-indication-box .text em{
   color: #0b6319;
+}
+.patient-home-indication-box.patient-home-indication-box.critical .text em{
+  color: #630b0b;
 }
 .patient-home-indication-box .text p{
   font-size: .8rem;
