added controlled input to add prescription route

--- a/src/pages/AddPrescription/add-prescription.css
+++ b/src/pages/AddPrescription/add-prescription.css
@@ -12,6 +12,12 @@
     margin-bottom: 2rem;
 }
 
+.prescription-error {
+  padding: 1rem;
+  color: white;
+  background: #f15e5e;
+}
+
 .medicine-name-div{
     display: flex;
     flex-direction: column;
