--- a/src/components/PatientConsultation/PatientConsultation.css
+++ b/src/components/PatientConsultation/PatientConsultation.css
@@ -102,3 +102,14 @@
   right: 2rem;
   top: 6rem;
 }
+.patient-consultation-container > button {
+  display: block;
+  margin: 2rem auto 0;
+  width: 60%;
+  padding: 1rem;
+  border: none;
+  border-radius: 1rem;
+  background-color: #28abfa;
+  font-size: 1.2rem;
+  color: #fff;
+}
