--- a/src/components/ExtraLogin/ExtraLogin.css
+++ b/src/components/ExtraLogin/ExtraLogin.css
@@ -14,6 +14,10 @@
   justify-content: space-around;
   margin: 1rem auto;
 }
+.logo {
+  background-color: transparent;
+  border: none;
+}
 .twitter-logo img,.facebook-logo img,.google-logo img{
   width: 3rem;
   margin: .5rem;
