--- a/src/pages/Patient/Patient.css
+++ b/src/pages/Patient/Patient.css
@@ -3,6 +3,14 @@
   min-height: 100vh;
   position: relative;
 }
+.loading{
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #224a68;
+  transform: translate(0, -50%);
+}
 .dashboard{
   padding: 2rem;
   background-color: #fff;
