--- a/src/components/EvalContent/EvalContent.css
+++ b/src/components/EvalContent/EvalContent.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   width: 22rem;
+  max-width: 100%;
   text-align: left;
 }
 .eval-content-container em{
@@ -85,8 +86,7 @@
 .eval-content-container input{
   display: block;
   padding: 1rem;
-  width: auto ;
-  max-width:600px;
+  max-width: 600px;
   border: solid 2px #234661;
   border-radius: 1rem;
   font-size: 1rem;
