--- a/src/pages/Patient/Patient.css
+++ b/src/pages/Patient/Patient.css
@@ -1,15 +1,21 @@
 .patient-container{
   background-color: #f0f2f6;
   min-height: 100vh;
-  position: relative;
 }
 .loading{
-  position: absolute;
-  top: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center; 
   width: 100%;
-  text-align: center;
-  color: #224a68;
-  transform: translate(0, -50%);
+  height: 100%;
+}
+.loading img{
+  align-self: center;
+  width: 100%;
+  max-width: 70px;
+  margin:8rem 0;
+  padding: 2rem 0; 
 }
 .dashboard{
   padding: 2rem;
