--- a/src/components/EvalContent/EvalContent.css
+++ b/src/components/EvalContent/EvalContent.css
@@ -155,3 +155,11 @@ input:focus{
   background: none;
   border: none;
 }
+.loading{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center; 
+  width: 100%;
+  height: 100%;
+}
