Splash screen implented

--- a/src/components/ProfilePicUploader/profile-pic-uploader.css
+++ b/src/components/ProfilePicUploader/profile-pic-uploader.css
@@ -7,8 +7,8 @@
     position: fixed;
     flex-direction: column;
     top: 15%;
-    left: 15%;
-    right: 15%;
+    left: 8%;
+    right: 8%;
     z-index: 6;
     padding: 1rem 2rem;
     background-color: #fff;
@@ -80,7 +80,7 @@
 }
 
 .visible-uploader{
-    z-index: unset;
+    z-index: 6;
 }
 
 .profile-pic-uploader .mask{
